# todo_app

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  tasks.json
.specify/memory/: constitution.md
history/prompts/001-todo-console-app/: 0001-todo-console-app-spec.spec.prompt.md  0002-todo-console-app-plan.plan.prompt.md  0003-todo-console-app-tasks.tasks.prompt.md  0004-todo-console-app-implementation.green.prompt.md  0005-todo-app-uv-fix.green.prompt.md  0006-todo-app-verification.misc.prompt.md  0007-todo-readme-update.general.prompt.md  0008-github-repo-creation.misc.prompt.md
history/prompts/constitution/: 001-todo-app-constitution-v1.constitution.prompt.md
specs/001-todo-console-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-console-app/checklists/: requirements.md
specs/001-todo-console-app/contracts/: README.md  cli-commands.md  service-interface.md
todo_app.egg-info/: entry_points.txt  requires.txt
todo_app/cli/: commands.py  main.py
todo_app/lib/: exceptions.py
todo_app/models/: task.py
todo_app/services/: task_service.py
todo_app/todo_app.egg-info/: PKG-INFO  SOURCES.txt
