[project]
name = "todo-app"
version = "0.1.0"
description = "Command-line todo application with in-memory storage"
readme = "README.md"
requires-python = ">=3.13"
authors = [{name = "Claude Code", email = "noreply@example.com"}]
dependencies = []

[project.scripts]
todo = "todo_app.cli.main:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
    "pytest",
]

[tool.uv]
package = true

[tool.setuptools]
packages = ["todo_app"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
typeCheckingMode = "standard"
reportMissingImports = "warning"
reportMissingTypeStubs = false
